# chessire

./: Cargo.toml  LICENSE  README.md  test.sh
benches/: perft_benchmark.rs
src/: bin.rs  bitboard.rs  bitboard_attacks.rs  board.rs  cli.rs  constants.rs  engine.rs  interface.rs  lib.rs  main.rs  moves.rs  piece.rs  test.rs  tile.rs
src/engine/: bitboard.rs  mod.rs  movegen.rs  moves.rs
src/engine/bitboard/: attacks.rs  constants.rs  magics.rs  mod.rs  moves.rs  occupancy.rs  tests.rs  util.rs
src/engine/mailbox/: board88.rs
src/game/: board.rs  color.rs  mod.rs  piece.rs
tests/: test_positions.rs  test_stockfish.rs
